--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: 刘盛毅
+title: 个人博客
 name: Liu Shengyi
 email: liushengyi2012@163.com
 description: 纵然你是站着，还是倒下，生活照样沿着它自有的轨道继续着前行，因此，为不负生命的价值与意义，唯有卸下心中的磊石，撕去一切无谓的虚荣，不为他人的视线去左右，亦不为生命的负重而停留，恁为你那一份不变的执着，赢得一张最后的灿烂的笑容。
